Fix form width and add overflow wrap to the list

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
 form {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 100%;
-  width: 500px;
+  width: 40rem;
   margin: 0 auto;
 }
 
@@ -53,6 +53,7 @@ form {
   padding: 0;
   margin: 0;
   list-style-type: none;
+  width: 100%;
 }
 
 .todos li {
@@ -60,6 +61,7 @@ form {
   cursor: pointer;
   font-size: 1.5rem;
   padding: 1rem 2rem;
+  overflow-wrap: break-word;
 }
 
 .todos li.completed {
